# quintet

./: .gitignore  Cargo.toml  README.md
.github/workflows/: wasm-pack-release.yml
examples/: analyze.rs  game.rs  solve.rs  solve_vcf.rs  solve_vct.rs  solve_vct_dfpn.rs  solve_vct_iddfs.rs
misc/: split_code.py
pkg/: LICENSE  README.md  package.json  quintet.d.ts  quintet.js  quintet_bg.js  quintet_bg.wasm  quintet_bg.wasm.d.ts
src/: analyzer.rs  bitboard.rs  board.rs  encoding.rs  foundation.rs  lib.rs  main.rs  mate.rs  solver.rs  wasm.rs
src/analyzer/: analyzer.rs  forbidden.rs  pattern.rs  pattern2.rs  row.rs  row2.rs
src/bitboard/: bits.rs  board.rs  coordinates.rs  forbidden.rs  fundamentals.rs  line.rs  point.rs  row.rs  segment.rs  square.rs
src/board/: bits.rs  board.rs  forbidden.rs  fundamentals.rs  line.rs  pattern.rs  point.rs  potential.rs  row.rs  segment.rs  sequence.rs  slot.rs  square.rs  structure.rs  util.rs  zobrist.rs
src/mate/: field.rs  game.rs  heatmap.rs  mate.rs  move_searcher.rs  solve.rs  state.rs  vcf.rs  vct.rs  vct_dfpn.rs  vct_lazy.rs  vct_local.rs
src/mate/vcf/: dfs.rs  iddfs.rs  state.rs
src/mate/vct/: dfpn.rs  dfpns.rs  dfs.rs  field.rs  generator.rs  helper.rs  lazy.rs  pns.rs  proof.rs  resolver.rs  searcher.rs  searcher2.rs  selector.rs  solver.rs  solver2.rs  state.rs  table.rs  traverser.rs
src/mate/vct_lazy/: generator.rs  helper.rs  proof.rs  resolver.rs  searcher.rs  solver.rs  state.rs  traverser.rs
src/mate/vct_local/: dfs.rs  iddfs.rs  state.rs
src/solver/: precomputed.rs  state.rs  vcf.rs  zhash.rs
(+21 files in other folders)
