[package]
name = "quintet"
version = "0.3.3"
authors = ["yubessy <yubessy0@gmail.com>"]
description = "Renju mate solver compilable to WebAssemby"
license = "MIT"
edition = "2018"
repository = "https://github.com/renju-note/quintet"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]
